--- a/utils/sugar1/src/scss/_sugar.scss
+++ b/utils/sugar1/src/scss/_sugar.scss
@@ -1,7 +1,10 @@
+@import 'colors/all';
 @import 'vendors/all';
 @import 'styleguide/all';
 @import 'functions/all';
+@import 'icons/all';
 @import 'list/all';
+@import 'loaders/all';
 @import 'math/all';
 @import 'meta/all';
 @import 'map/all';
