--- a/utils/sugar1/src/scss/effects/_all.scss
+++ b/utils/sugar1/src/scss/effects/_all.scss
@@ -1,12 +1,5 @@
 @import "effect-bubble";
 @import "effect-depth";
 @import "effect-hey";
-// @import "loader-bars";
-// @import "loader-circle";
-// @import "loader-couch-potato";
-// @import "loader-flip-ball";
-// @import "loader-grid";
-// @import "loader-radial";
-// @import "loader-spinner";
-// @import "long-shadow";
-// @import "side-lined";
+@import "effect-long-shadow";
+@import "effect-side-lined";
