--- a/utils/sugar1/src/scss/functions/_all.scss
+++ b/utils/sugar1/src/scss/functions/_all.scss
@@ -1,8 +1,6 @@
-// @import "base64-icon";
-// @import "border-map";
-// @import "columnmap";
-// @import "margin-map";
+@import "border-map";
+@import "columns-map";
+@import "margin-map";
 @import "position-map";
-// @import "rhythm-width";
-// @import "encode-inline-svg";
+@import "rhythm-width";
 @import "translate-map";
