--- a/utils/sugar1/src/scss/list/_all.scss
+++ b/utils/sugar1/src/scss/list/_all.scss
@@ -4,6 +4,7 @@
 @import 'list-join';
 @import 'list-last-nth';
 @import 'list-length';
+@import 'list-nth';
 @import 'list-pop';
 @import 'list-prepend';
 @import 'list-remove-nth';
