--- a/utils/sugar1/src/scss/map/_all.scss
+++ b/utils/sugar1/src/scss/map/_all.scss
@@ -5,6 +5,7 @@
 @import 'map-get-path';
 @import 'map-get';
 @import 'map-has-key';
+@import 'map-keys';
 @import 'map-merge';
 @import 'map-remove';
 @import 'map-set';
