--- a/utils/sugar1/src/scss/math/_all.scss
+++ b/utils/sugar1/src/scss/math/_all.scss
@@ -1,6 +1,8 @@
+@import 'math-abs';
 @import 'math-acos';
 @import 'math-asin';
 @import 'math-atan';
+@import 'math-ceil';
 @import 'math-convert-angle';
 @import 'math-cos';
 @import 'math-deg';
@@ -9,6 +11,8 @@
 @import 'math-percentage';
 @import 'math-pow';
 @import 'math-rad';
+@import 'math-random';
+@import 'math-round';
 @import 'math-sin';
 @import 'math-sqrt';
 @import 'math-tan';
