--- a/utils/sugar1/src/scss/mixins/_all.scss
+++ b/utils/sugar1/src/scss/mixins/_all.scss
@@ -21,7 +21,7 @@
 // @import "rhythm-width";
 // @import "round";
 @import "size";
-// @import "translate";
+@import "translate";
 // @import "triangle";
 @import "text-truncate";
 // @import "vertical-aligner";
