--- a/utils/sugar1/src/scss/string/_all.scss
+++ b/utils/sugar1/src/scss/string/_all.scss
@@ -1,5 +1,9 @@
+@import 'str-index';
 @import 'str-is-url';
+@import 'str-length';
 @import 'str-replace';
+@import 'str-slice';
 @import 'str-split';
+@import 'str-unique-id';
 @import 'str-unquote';
 @import 'str-url-ext';
