--- a/utils/sugar1/src/scss/effects/_effect-long-shadow.scss
+++ b/utils/sugar1/src/scss/effects/_effect-long-shadow.scss
@@ -11,19 +11,19 @@
  *
  * @example
  * .my-cool-title {
- * 		\@include s-long-shadow(
+ * 		\@include sugar.effect-long-shadow(
  * 			$depth : 10
  * 		);
  * }
  * .my-cool-box {
- * 		\@include s-long-shadow(
+ * 		\@include sugar.effect-long-shadow(
  * 			$type : box
  * 		);
  * }
  *
  * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
  */
-@mixin s-long-shadow(
+@mixin effect-long-shadow(
   $color: rgba(0, 0, 0, 0.3),
   $type: text,
   $angle: 135deg,
@@ -32,32 +32,30 @@
   $blur: 0,
   $blur-ratio: 0
 ) {
-  @if $_sugar-test-arguments {
-    $color: s-test-argument("s-long-shadow", "color", color, $color);
-    $type: s-test-argument("s-long-shadow", "type", (text, box), $type);
-    $angle: s-test-argument("s-long-shadow", "angle", degree, $angle);
-    $depth: s-test-argument("s-long-shadow", "depth", integer, $depth);
-    $fade: s-test-argument("s-long-shadow", "fade", boolean, $fade);
-    $blur: s-test-argument("s-long-shadow", "blur", number, $blur);
-    $blur-ratio: s-test-argument(
-      "s-long-shadow",
-      "blur-ratio",
-      number,
-      $blur-ratio
-    );
-  }
+  $color: test-argument("sugar.effect-long-shadow", "color", color, $color);
+  $type: test-argument("sugar.effect-long-shadow", "type", (text, box), $type);
+  $angle: test-argument("sugar.effect-long-shadow", "angle", degree, $angle);
+  $depth: test-argument("sugar.effect-long-shadow", "depth", integer, $depth);
+  $fade: test-argument("sugar.effect-long-shadow", "fade", boolean, $fade);
+  $blur: test-argument("sugar.effect-long-shadow", "blur", number, $blur);
+  $blur-ratio: test-argument(
+    "sugar.effect-long-shadow",
+    "blur-ratio",
+    number,
+    $blur-ratio
+  );
 
-  $angle: (s-strip-units($angle) - 90);
-  $x: 1.5 * cos($angle) + 0px;
-  $y: 1.5 * sin($angle) + 0px;
-  $darken: (lightness($color) / $depth)/2;
+  $angle: (strip-units($angle) - 90);
+  $x: 1.5 * math-cos($angle) + 0px;
+  $y: 1.5 * math-sin($angle) + 0px;
+  $darken: (color-lightness($color) / $depth)/2;
   $opacify: 0;
   $shadow: ();
 
   $darken: 0;
 
   @if $fade == true {
-    $opacify: (opacity($color) / $depth);
+    $opacify: (color-opacity($color) / $depth);
     transform: translateX(0);
   }
 
@@ -73,9 +71,9 @@
         $y
         $b
         hsla(
-          hue($color),
-          saturation($color),
-          (lightness($color) - ($i * $darken)),
+          color-hue($color),
+          color-saturation($color),
+          (color-lightness($color) - ($i * $darken)),
           1 - ($i * $opacify)
         );
   }
