--- a/utils/sugar1/src/scss/mixins/_translate.scss
+++ b/utils/sugar1/src/scss/mixins/_translate.scss
@@ -1,19 +1,20 @@
 /**
+ * @name    translate
  * Quicky set some translates
  * @param 		{Number} 		[$x=0] 		The x translate value
  * @param 		{Number} 		[$y=0] 		The y translate value
  * @param 		{Number} 		[$z=0] 		The z translate value
  *
- * @example
+ * @example     scss
  * .my-cool-element {
- * 	\@include s-translate(50%, 20px);
+ * 	\@include sugar.translate(50%, 20px);
  * }
  *
  * @author 		Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
  */
-@mixin s-translate($x: 0, $y: 0, $z: 0) {
+@mixin translate($x: 0, $y: 0, $z: 0) {
   // get the translate props
-  $translate: s-translate-map(
+  $translate: translate-map(
     $x: $x,
     $y: $y,
     $z: $z
